--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -2213,7 +2213,12 @@ test_config:
     assert_pcc: false # PCC is -0.715
     status: EXPECTED_PASSING
 
-  # yolov11/pytorch-yolo11n-single_device-inference:
+  issac_groot/pytorch-GR00T_n1.5-3b-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "Statically allocated circular buffers on core range [(x=6,y=7) - (x=6,y=7)] grow to 2012288 B which is beyond max L1 size of 1499136 B" # https://github.com/tenstorrent/tt-xla/issues/2817
+    bringup_status: FAILED_RUNTIME
+
+  # yolov11/pytorch-yolo11n-single_device-full-inference:
   #   status: EXPECTED_PASSING
 
   # yolov11/pytorch-yolo11s-single_device-inference:
