update transformers library to 4.57.1 and torch to 2.9.0

--- a/.github/workflows/manual-benchmark.yml
+++ b/.github/workflows/manual-benchmark.yml
@@ -72,3 +72,4 @@ jobs:
         ref: ${{ needs.set-inputs.outputs.ref }}
         test-filter: ${{ inputs.test_filter }}
         sh-runner: ${{ inputs.sh-runner }}
+        docker-image: ghcr.io/tenstorrent/tt-xla-slim:nightly-latest
