--- a/.github/workflows/call-create-release-docker.yml
+++ b/.github/workflows/call-create-release-docker.yml
@@ -34,31 +34,17 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ github.token }}
 
-      - name: Set tag
-        shell: bash
-        id: set-tag
-        run: |
-          source .version
-          tag="$VERSION"
-
-          if [[ "${{ inputs.is_nightly_release }}" == "true" ]]; then
-            nigthly_release_suffix="dev$(date +'%Y%m%d')"
-            tag="$VERSION.$nigthly_release_suffix"
-          fi
-
-          echo "tag=$tag" >> $GITHUB_OUTPUT
-
       - name: Build & push Docker image
         shell: bash
         id: build-docker
         run: |
           set pipefail
 
-          docker_version_tag="${{ steps.set-tag.outputs.tag }}"
+          docker_tag="${{ github.sha }}"
           is_nigthly_release="${{ inputs.is_nightly_release }}"
-          echo "Docker tag: $docker_version_tag"
+          echo "Docker tag: $docker_tag"
 
-          .github/build-release-docker-image.sh $docker_version_tag $is_nigthly_release | tee docker.log
+          .github/build-release-docker-image.sh $docker_tag $is_nigthly_release | tee docker.log
 
           docker_image=$(tail -n 1 docker.log)
           echo "Docker image built and pushed: $docker_image"
