--- a/.github/workflows/schedule-nightly.yml
+++ b/.github/workflows/schedule-nightly.yml
@@ -72,8 +72,8 @@ jobs:
       artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
-  publish-release:
-    uses: ./.github/workflows/call-publish-release.yml
+  publish-release-wheel:
+    uses: ./.github/workflows/call-publish-release-wheel.yml
     secrets: inherit
     # needs: [ test_shield_models ]
     with:
@@ -81,21 +81,29 @@ jobs:
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       is_nigthly_release: true
 
-  create_release_docker:
+  create-release-docker:
     uses: ./.github/workflows/call-create-release-docker.yml
     secrets: inherit
-    needs: [ publish-release ]
+    needs: [ publish-release-wheel ]
     with:
       wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      is_nigthly_release: true
 
-  release_tests:
-    uses: ./.github/workflows/call-publish-release.yml
+  release-tests:
+    uses: ./.github/workflows/call-release-tests.yml
     secrets: inherit
-    needs: [ create_release_docker ]
+    needs: [ create-release-docker ]
     with:
       release_docker_image: ${{ needs.create_release_docker.outputs.docker_image }}
+
+  publish-release:
+    uses: ./.github/workflows/call-publish-release.yml
+    secrets: inherit
+    needs: [ publish-release-wheel, create-release-docker, release-tests ]
+    with:
+      release_tag: ${{ needs.publish-release-wheel.outputs.release_tag }}
+      is_nigthly_release: true
+      docker_image_base: ${{ needs.create-release-docker.outputs.docker_image_base }}
 
   # todo(vvukoman): github release, git tag, add tags to Docker image (latests and release tags)
   # before it had only a commit hash tag
