--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -8,6 +8,11 @@ on:
         type: string
         required: true
 
+permissions:
+  contents: write
+  actions: read
+  id-token: write
+
 jobs:
   publish-release:
     name: Publish release
