--- a/.github/workflows/schedule-nightly.yml
+++ b/.github/workflows/schedule-nightly.yml
@@ -71,6 +71,23 @@ jobs:
       artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
+  # todo(vvukoman): pack only the pjrt_plugin_tt whl or vllm whl as well?
+  # not tested - docker image create
+  build-release-docker:
+    uses: ./.github/workflows/call-build-release-docker.yml
+    secrets: inherit
+    with:
+      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+
+  # not tested - perf & demo tests
+  release-tests:
+    uses: ./.github/workflows/call-release-tests.yml
+    secrets: inherit
+    needs: [ build-release-docker ]
+    with:
+      release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
+
   publish-release-wheel:
     uses: ./.github/workflows/call-publish-release-wheel.yml
     secrets: inherit
@@ -80,29 +97,16 @@ jobs:
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       is_nigthly_release: true
 
-  create-release-docker:
-    uses: ./.github/workflows/call-create-release-docker.yml
-    secrets: inherit
-    needs: [ publish-release-wheel ]
-    with:
-      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-
-  release-tests:
-    uses: ./.github/workflows/call-release-tests.yml
-    secrets: inherit
-    needs: [ create-release-docker ]
-    with:
-      release_docker_image: ${{ needs.create_release_docker.outputs.docker_image }}
-
+  # tested - tag push, github release push
+  # not tested - docker image additional tags push
   publish-release:
     uses: ./.github/workflows/call-publish-release.yml
     secrets: inherit
-    needs: [ publish-release-wheel, create-release-docker, release-tests ]
+    needs: [ publish-release-wheel, build-release-docker, release-tests ]
     with:
       release_tag: ${{ needs.publish-release-wheel.outputs.release_tag }}
       is_nigthly_release: true
-      docker_image_base: ${{ needs.create-release-docker.outputs.docker_image_base }}
+      docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
 
   # todo(vvukoman): github release, git tag, add tags to Docker image (latests and release tags)
   # before it had only a commit hash tag
